--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2023 Retro Website. All rights reserved.
+        &copy; <script>document.write(new Date().getFullYear());</script> Retro Website. All rights reserved.
     </footer>
 </body>
 </html>
